--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.3.0'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
+    compile group: 'org.json', name: 'json', version: '20160810'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
 }
