--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
     compile group: 'org.json', name: 'json', version: '20160810'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
 }
