--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '20160810'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 }
